--- a/WebTest/appsettings.json
+++ b/WebTest/appsettings.json
@@ -1,5 +1,7 @@
 {
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=testvisionet.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
